31 Oct 2013: Wouter
	- Fix #531: Set SO_REUSEADDR so that the wildcard interface and a 
	  more specific interface port 53 can be used at the same time, and
	  one of the daemons is unbound.
	- iana portlist update.
	- separate ldns into core ldns inside ldns/ subdirectory.  No more
	  --with-ldns is needed and unbound does not rely on libldns.
	- portability fixes for new USE_SLDNS ldns subdir codebase.

22 Oct 2013: Wouter
	- Patch from Neel Goyal: Add an API call to set an event base on an
	  existing ub_ctx.  This basically just destroys the current worker and
	  sets the event base to the current.  And fix a deadlock in
	  ub_resolve_event – the cfglock is held when libworker_create is
	  called.  This ends up trying to acquire the lock again in
	  context_obtain_alloc in the call chain.
	- Fix #528: if very high logging (4 or more) segfault on allow_snoop.

26 Sep 2013: Wouter
	- unbound-event.h is installed if configured --with-libevent.  It
	  contains low-level library calls, that use libevent's event_base
	  and an ldns_buffer for the wire return packet to perform async
	  resolution in the client's eventloop.

19 Sep 2013: Wouter
	- 1.4.21 tag created.
	- trunk has 1.4.22 number inside it.
	- iana portlist updated.
	- acx_nlnetlabs.m4 to 26; improve FLTO help text.

16 Sep 2013: Wouter
	- Fix#524: max-udp-size not effective to non-EDNS0 queries, from
	  Daisuke HIGASHI.

10 Sep 2013: Wouter
	- MIN_TTL and MAX_TTL also in time_t.
	- tag 1.4.21rc1 made again.

26 Aug 2013: Wouter
	- More fixes for bug#519: for the threaded case test if the bg
	  thread has been killed, on ub_ctx_delete, to avoid hangs.

22 Aug 2013: Wouter
	- more fixes that I overlooked.
	- review fixes from Willem.

21 Aug 2013: Wouter
	- Fix#520: Errors found by static analysis from Tomas Hozza(redhat).

20 Aug 2013: Wouter
	- Fix for 2038, with time_t instead of uint32_t.

19 Aug 2013: Wouter
	- Fix#519 ub_ctx_delete may hang in some scenarios (libunbound).

14 Aug 2013: Wouter